# instant-generics

./: instant-generics.cabal
examples/: DataKinds.hs  GMapAssoc.hs  Test.hs
src/Generics/: Instant.hs
src/Generics/Instant/: Base.hs  Functions.hs  GDiff.hs  Instances.hs  TH.hs
src/Generics/Instant/Functions/: Empty.hs  Enum.hs  Eq.hs  Show.hs  Update.hs
src/Generics/SP/: Instances.hs
src/Generics/SP/Functions/: Eq.hs
