category:               Generics
copyright:              (c) 2010 Universiteit Utrecht
name:                   instant-generics
version:                0.1
license:                BSD3
license-file:           LICENSE
author:                 Manuel Chakravarty, Gabriel Ditu, Roman Leshchinskiy,
                        Jose Pedro Magalhaes
maintainer:             generics@haskell.org
synopsis:               Generic programming library with a Sum of Products view
description:               

  This is a generic programming library based on type classes and type families
  first described by Chakravarty et al. (see 
  <http://www.cse.unsw.edu.au/~chak/project/generics/>). The current release
  is a simplified version mostly to support the rewriting library described 
  in the paper:
  .
  *  /A Lightweight Approach to Datatype-Generic Rewriting./
     Thomas van Noort, Alexey Rodriguez Yakushev, Stefan Holdermans, 
     Johan Jeuring, Bastiaan Heeren, Jose Pedro Magalhaes.
     Journal of Functional Programming, Special Issue on Generic Programming, 
     2010.

stability:              provisional
build-type:             Simple
cabal-version:          >= 1.2.1
ghc-options:            -Wall
build-depends:          base >= 3.0 && < 5
exposed-modules:        Generics.Instant,
                        Generics.Instant.Base,
                        Generics.Instant.Instances,
                        Generics.Instant.Functions,
                        Generics.Instant.Functions.Show,
                        Generics.Instant.Functions.Empty,
                        Generics.Instant.Functions.Eq
hs-source-dirs:         src
